fix footer jump on refresh/navigation

--- a/apps/web-client/src/app/app.component.less
+++ b/apps/web-client/src/app/app.component.less
@@ -1,10 +1,5 @@
-#app-top-bar {
-  @apply h-16 p-2 md:px-4 flex items-center gap-4 z-10 sticky top-0 bg-white transition-all
-    shadow;
-  
-  &.dark {
-    @apply bg-secondary-950 text-white;
-  }
+#app-header {
+  @apply h-16 z-10 sticky top-0 shadow;
 }
 
 #app-sidenav {
